--- a/src/app/landing/landing.page.scss
+++ b/src/app/landing/landing.page.scss
@@ -277,83 +277,81 @@ label.light {
             color: #8892b0;
         }
     }
+
+    .floatingImage {
+        position: absolute;
+        margin-right: 30%;
+        margin-top: -10%;
+        right: 0;
+        z-index: 9999;
+    }
 }
 
 .workImages {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    // position: absolute;
-    // right: 0;
-    // transform: translate(16px, 10px);
-
-    ion-img {
-        width: auto;
-        height: 100%;
-        max-width: 350px;
-        max-height: 350px;
-        min-width: 177px;
-        // border-radius: 6px;
-
-        &:hover {
-            .overlay {
-                display:block;
-            }
-        }
+    div {
+        display: flex;
+        flex-direction: column;
+    }
+    ion-card {
+        --ion-background-color: #172a45;
     }
 
     ion-item {
-        padding: 10px;
+        width: 100%;
+        max-width: 300px;
     }
-}
-.workImages ion-item:hover .overlay {
-    display: block;
-    transition: transform 0.5s;
 
-
-    
-}
-
-.langs {
-    position: absolute;
-    bottom: 0;
-    left:0;
-}
-
-.overlay {
-    transition: transform 0.5s;
-    display: none;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: #172a45 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #00000029;
-    // border-radius: 6px;
-    opacity: 0.99;
-    padding: 10px 10px 0px 30px;
-
-    h2 {
-        font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    ion-card-title {
         color: #ccd6f6;
     }
 
-    p {
+    ion-card-content {
         color: #8892b0;
     }
 
-    .links {
+    ion-buttons {
+        color: #ccd6f6;
+        justify-content: flex-end;
+    }
+
+    ion-card-subtitle {
+        color: #8892b0;
+        font-size: 12px;
+        word-spacing: 15px;
+    }
+
+    ion-item:hover {
+        ion-img {
+            display: block;
+        }
+    }
+
+    ion-img {
+        display: none;
         position: absolute;
-        bottom: 0;
-        right: 0;
-        padding-right: 20px;
-        padding-bottom: 20px;
-        color: #fff;
+        width: 100%;
+        height: 100%;
+        z-index: 999;
     }
 }
 
 
+.workImages ion-item:hover + .floatingImage{
+        display: contents;
+}
 
+@media (max-width: 800px) {
+    .workImages {
+        ion-item {
+            max-width: 100%;
+        }
+    }
+}
 
-@media(max-width: 800px){
-
+@media (max-width: 425px) {
+    .floatingImage {
+        display: none;
+    }
 }
