--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -174,6 +174,8 @@
             </div>
         </ion-menu>
 
+        <span class="cursor" (document:mousemove)="customCursor($event)"></span>
         <ion-router-outlet id="main-content"></ion-router-outlet>
     </ion-split-pane>
 </ion-app>
+
