--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -194,9 +194,9 @@
   </section>
 
   <!-- Finally | Reach out-->
-  <section class="sec">
+  <!-- <section class="sec">
     <label class="heroText"></label>
-  </section>
+  </section> -->
 
   <!-- last page-->
   <footer>
