--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,25 @@ $mainblue: #0099ff;
     }
 }
 
+.defaultMenuV2Mini {
+    background-color: #ffffff;
+    background: #ffffff;
+    .ia-small {
+        background-color: transparent;
+        border: 2px solid #0a192f;
+
+        * {
+            color: #0a192f;
+        }
+    }
+    
+    ion-footer {
+        ion-icon{
+            color: $dark-blue;
+        }
+    }
+}
+
 .contactMenu {
     width: 500px;
     min-width: 0px;
