--- a/src/app/me/me.page.scss
+++ b/src/app/me/me.page.scss
@@ -33,25 +33,32 @@ ion-col {
     h1 {
         color: #0a192f;
         font-weight: 500;
-        font-size: 45px;
+        font-size: 55px;
         letter-spacing: 1px;
         line-height: 54px;
+
+        &:nth-child(2) {
+            font-size: 35px;
+        }
+        &:nth-child(3) {
+            font-size: 35px;
+        }
     }
 
     p {
+        font-size: 18px;
         word-wrap: wrap;
         white-space: normal;
-        line-height: 30px;
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-
+        line-height: 50px;
+        max-width: 550px;
         ion-button {
             background-color: transparent;
             --padding-start: 0px;
             --padding-end: 0px;
             text-transform: unset;
             font-size: inherit;
+            padding-bottom: 12px;
+            text-decoration: underline;
         }
 
         ion-text {
@@ -63,7 +70,9 @@ ion-col {
             width: 10px;
             height: 2px;
         }
+       
     }
+
     .logo {
         background-color: #0a192f;
         height: 30px;
@@ -75,7 +84,13 @@ ion-col {
         align-items: center;
     }
 }
-
+.langUsed {
+        justify-content: space-between;
+        font-size: 16px!important;
+        font-weight: 600;
+        color: dimgrey;
+   
+}
 .descriptionCol {
     margin-top: 10%;
 
@@ -105,15 +120,9 @@ ion-col {
         display: flex;
         align-items: center;
         justify-content: center;
-        box-shadow:
-        0 0px 5.7px -7px rgba(0, 0, 0, 0.13),
-        0 0px 14.5px -7px rgba(0, 0, 0, 0.019),
-        0 0px 29.6px -7px rgba(0, 0, 0, 0.02),
-        0 0px 61px -7px rgba(0, 0, 0, 0.032),
-        0 0px 167px -7px rgba(0, 0, 0, 0.04)
-      ;
-      
-      
+        box-shadow: 0 0px 5.7px -7px rgba(0, 0, 0, 0.13), 0 0px 14.5px -7px rgba(0, 0, 0, 0.019),
+            0 0px 29.6px -7px rgba(0, 0, 0, 0.02), 0 0px 61px -7px rgba(0, 0, 0, 0.032),
+            0 0px 167px -7px rgba(0, 0, 0, 0.04);
 
         img {
             object-fit: contain;
@@ -123,7 +132,7 @@ ion-col {
             border-radius: 100%;
         }
 
-        &:nth-child(odd){
+        &:nth-child(odd) {
             margin-top: 4%;
             margin-right: -20px;
         }
@@ -134,4 +143,26 @@ ion-col {
             margin-top: -20%;
         }
     }
+
+    
+}
+
+.whatsappColor {
+    color: #75b73b;
+}
+
+.LinkedIn {
+    color: #0e76a8;
+}
+
+.instaValColor {
+    color: #02a1fe;
+}
+
+.dcColor {
+    color: rgb(41, 146, 143);
+}
+
+.defaultSideMenu {
+    background-color: #ffffff !important;
 }
