--- a/src/app/me/me.page.html
+++ b/src/app/me/me.page.html
@@ -6,8 +6,8 @@
 
         <!-- Intro-->
         <!-- <ion-item lines="none"> -->
-          <!-- Name logo goes here -->
-          <!-- <ion-label>
+        <!-- Name logo goes here -->
+        <!-- <ion-label>
             <span class="logo">IA</span>
           </ion-label>
         </ion-item> -->
@@ -25,9 +25,11 @@
             <p>Hello, I'm Israel - you may call me easy.</p>
             <p>I'm a self taught Software Developer and i currently focus on Frontend Developement and UI-UX Design.</p>
             <p>Hit me up on
-              <ion-button fill="none" class="whatsappColor" href="https://api.whatsapp.com/send?phone=+971509730664" target="_blank"> Whatsapp </ion-button>
+              <ion-button fill="none" class="whatsappColor" href="https://api.whatsapp.com/send?phone=+971509730664"
+                target="_blank"> Whatsapp </ion-button>
               <ion-text>& </ion-text>
-              <ion-button fill="none" class="LinkedIn" href="https://www.linkedin.com/in/easyadin/" target="_blank"> LinkedIn</ion-button>
+              <ion-button fill="none" class="LinkedIn" href="https://www.linkedin.com/in/easyadin/" target="_blank">
+                LinkedIn</ion-button>
               <ion-text> to discuss opportunities.</ion-text>
             </p>
           </ion-label>
@@ -36,14 +38,16 @@
           <ion-label>
             <p>
               Currently, i work at <span>
-                <ion-button fill="none" class="instaValColor" href="https://www.instaval.co/" target="_blank">InstaVal</ion-button>
+                <ion-button fill="none" class="instaValColor" href="https://www.instaval.co/" target="_blank">InstaVal
+                </ion-button>
               </span>
               and i'm priviledged to build a startup with a
               <span>
                 <ion-button fill="none" href="" target="_blank"> dear friend</ion-button>
               </span>
               at <span>
-                <ion-button fill="none" class="dcColor" href="https://dreamsconnect.web.app/" target="_blank"> Dreams Connect.</ion-button>
+                <ion-button fill="none" class="dcColor" href="https://dreamsconnect.web.app/" target="_blank"> Dreams
+                  Connect.</ion-button>
               </span>
             </p>
           </ion-label>
@@ -51,7 +55,7 @@
 
         <ion-list lines="none" *ngFor="let work of selectedWork">
           <!-- Project details-->
-          <ion-item>
+          <ion-item *ngIf="selectedWork.length === 1">
             <ion-label>
               <!-- Project name and for whom-->
               <h1>{{work.workName}}</h1>
@@ -83,7 +87,13 @@
 
       <ion-col class="projectListCol" size="12" size-lg="6">
         <!-- project list -->
-        <ion-label *ngFor="let work of works" (click)="onClickWork(work)">
+        <ion-label *ngFor="let work of works" (click)="onClickWork(work)"
+          [ngClass]="{'active': work.id === workClicked, 'ion-padding': work.id === workClicked}">
+          <ion-buttons *ngIf="work.id === workClicked">
+            <ion-button (click)="revertback($event)">
+              <ion-icon slot="icon-only" name="close"></ion-icon>
+            </ion-button>
+          </ion-buttons>
           <img [src]="work.imageUrl">
         </ion-label>
       </ion-col>
