--- a/src/app/me/me.page.scss
+++ b/src/app/me/me.page.scss
@@ -186,3 +186,35 @@ ion-label.active {
         border-radius: 0 !important;
     }
 }
+
+
+// keyframes and animation
+h1 {
+    animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1s;
+    transition: 1s ease-in-out;
+}
+
+p{
+    &:first-child {
+        animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.5s;
+    }
+    &:nth-child(2) {
+        animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 2s;
+    }
+    &:nth-child(3) {
+        animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 2.5s;
+    }
+}
+
+
+@keyframes reveal {
+    0% {
+      transform: translate(0, 100%);
+      opacity: 0;
+    }
+  
+    100% {
+      transform: translate(0, 0);
+      opacity: 1;
+    }
+  }
