--- a/src/app/me/me.page.html
+++ b/src/app/me/me.page.html
@@ -5,12 +5,12 @@
         <!-- My name | About me | Project descripion --- goes here-->
 
         <!-- Intro-->
-        <!-- <ion-item lines="none"> -->
-        <!-- Name logo goes here -->
-        <!-- <ion-label>
+        <ion-item lines="none">
+          <!-- Name logo goes here -->
+          <ion-label class="logoMobile">
             <span class="logo">IA</span>
           </ion-label>
-        </ion-item> -->
+        </ion-item>
         <ion-item lines="none" *ngIf="selectedWork.length === 0">
           <ion-label>
             <h1>Israel Ayokunnu</h1>
