--- a/src/app/me/me.page.scss
+++ b/src/app/me/me.page.scss
@@ -204,6 +204,9 @@ p{
     &:nth-child(3) {
         animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 2.5s;
     }
+    &:nth-child(4) {
+        animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 3s;
+    }
 }
 
 
@@ -218,3 +221,47 @@ p{
       opacity: 1;
     }
   }
+.logoMobile {
+    display: none;
+}
+
+  @media (max-width: 800px) {
+
+    h1 {
+        line-height: inherit!important;
+        &:first-child {
+            font-size: 36px!important;
+        }
+
+        &:nth-child(2){
+            font-size: 20px!important;
+        }
+
+        &:nth-child(3){
+            font-size: 20px!important;
+        }
+    }
+
+    p {
+        line-height: 40px!important;
+        font-size: 14px!important;
+    }
+
+    .logoMobile {
+        display: block;
+    }
+
+
+    ion-label.active  {
+        max-width: 100%!important;
+        border-radius: 0px!important;
+    }
+
+    .projectListCol {
+        justify-content: center;
+        ion-label {
+            max-width: 150PX;
+            max-height: 150PX;
+        }
+    }
+}
