--- a/src/app/me/me.page.html
+++ b/src/app/me/me.page.html
@@ -89,12 +89,51 @@
         <!-- project list -->
         <ion-label *ngFor="let work of works" (click)="onClickWork(work)"
           [ngClass]="{'active': work.id === workClicked, 'ion-padding': work.id === workClicked}">
-          <ion-buttons *ngIf="work.id === workClicked">
-            <ion-button (click)="revertback($event)">
-              <ion-icon slot="icon-only" name="close"></ion-icon>
-            </ion-button>
-          </ion-buttons>
+          <ion-header *ngIf="work.id === workClicked" class="ion-no-border">
+            <ion-toolbar>
+              <ion-title class="mobileTitle hideOnDestop">
+                <ion-label>
+                  <h2> {{work.workName}}</h2>
+                  <h3>For {{work.client}}</h3>
+                </ion-label>
+              </ion-title>
+              <ion-buttons *ngIf="work.id === workClicked" slot="end">
+                <ion-button (click)="revertback($event)">
+                  <ion-icon slot="icon-only" name="close"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
           <img [src]="work.imageUrl">
+         <ion-footer class="hideOnDestop" *ngIf="work.id === workClicked">
+          <ion-item lines="none" class="mobileDescrip" *ngIf="work.id === workClicked">
+            <ion-label>
+              <p>{{work.workDescription}}</p>
+            </ion-label>
+          </ion-item>
+          <ion-item lines="none">
+            <!-- relevant links -->
+            <ion-buttons>
+              <ion-button href={{work.link}} *ngIf="work.link" target="_blank">
+                <!-- website link-->
+                <ion-icon name="globe-outline" slot="icon-only"></ion-icon>
+              </ion-button>
+              <ion-button href={{work.UI}} *ngIf="work.UI" target="_blank">
+                <!-- design prototype -->
+                <ion-icon name="pulse-outline" slot="icon-only"></ion-icon>
+              </ion-button>
+              <ion-button href={{work.githubRepo}} *ngIf="work.githubRepo" target="_blank">
+                <!-- github -->
+                <ion-icon name="logo-github" slot="icon-only"></ion-icon>
+              </ion-button>
+            </ion-buttons>
+          </ion-item>
+          <ion-item lines="none" class="mobileDescrip">
+            <ion-label>
+              <p>{{work.languageUsed}}</p>
+            </ion-label>
+          </ion-item>
+         </ion-footer>
         </ion-label>
       </ion-col>
     </ion-row>
