--- a/src/app/me/me.page.scss
+++ b/src/app/me/me.page.scss
@@ -109,10 +109,7 @@ ion-col {
 
     ion-label {
         transition: 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
-        transition-delay: .1s;
-      
-     
-
+        transition-delay: 0.1s;
         background-color: #ffffff;
         display: block;
         width: 100%;
@@ -169,8 +166,8 @@ ion-col {
 }
 
 ion-label.active {
-    transition:.3s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition-delay: .1s;
+    transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition-delay: 0.1s;
 
     border-radius: 0px !important;
     z-index: 99999;
@@ -179,7 +176,7 @@ ion-label.active {
     position: fixed;
     flex-direction: column;
     max-height: 100% !important;
-    margin-right: 5px!important;
+    margin-right: 5px !important;
     top: 0;
     right: 0;
     img {
@@ -187,14 +184,13 @@ ion-label.active {
     }
 }
 
-
 // keyframes and animation
 h1 {
     animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1s;
     transition: 1s ease-in-out;
 }
 
-p{
+p {
     &:first-child {
         animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.5s;
     }
@@ -209,59 +205,118 @@ p{
     }
 }
 
-
 @keyframes reveal {
     0% {
-      transform: translate(0, 100%);
-      opacity: 0;
+        transform: translate(0, 100%);
+        opacity: 0;
     }
-  
+
     100% {
-      transform: translate(0, 0);
-      opacity: 1;
+        transform: translate(0, 0);
+        opacity: 1;
     }
-  }
+}
 .logoMobile {
     display: none;
 }
 
-  @media (max-width: 800px) {
+@media (max-width: 1440px) {
+    .projectListCol {
+        ion-label {
+            max-width: 300px;
+            max-height: 300px;
+        }
+    }
+}
 
+@media (max-width: 1366px) {
+    .projectListCol {
+        ion-label {
+            max-width: 200px;
+            max-height: 200px;
+        }
+    }
+}
+
+@media (max-width: 800px) {
     h1 {
-        line-height: inherit!important;
+        line-height: inherit !important;
         &:first-child {
-            font-size: 36px!important;
+            font-size: 36px !important;
         }
 
-        &:nth-child(2){
-            font-size: 20px!important;
+        &:nth-child(2) {
+            font-size: 20px !important;
         }
 
-        &:nth-child(3){
-            font-size: 20px!important;
+        &:nth-child(3) {
+            font-size: 20px !important;
         }
     }
 
     p {
-        line-height: 40px!important;
-        font-size: 14px!important;
+        line-height: 40px !important;
+        font-size: 14px !important;
     }
 
     .logoMobile {
         display: block;
     }
 
-
-    ion-label.active  {
-        max-width: 100%!important;
-        border-radius: 0px!important;
+    ion-label.active {
+        max-width: 100% !important;
+        border-radius: 0px !important;
     }
 
     .projectListCol {
         justify-content: center;
         ion-label {
-            max-width: 150PX;
-            max-height: 150PX;
+            max-width: 150px;
+            max-height: 150px;
         }
+    }
+}
+
+.mobileTitle {
+    padding: 0;
+    margin: 0;
+    ion-label {
+        margin: 0 !important;
+        max-width: 100% !important;
+        width: 100% !important;
+        height: 100%;
+        max-height: 100% !important;
+        text-align: left;
+        display: flex;
+        justify-content: left;
+        flex-direction: column;
+        align-items: self-end;
+    }
+}
+
+.mobileDescrip {
+    width: 100%;
+
+    ion-label {
+        border-radius: 0px !important;
+        max-width: 100% !important;
+        max-width: 100% !important;
+        height: 100% !important;
+        width: 100% !important;
+        margin-top: initial !important;
+        justify-content: start;
+
+        p {
+        }
+    }
+}
+
+.hideOnDestop {
+    display: none;
+}
+
+@media (max-width: 800px) {
+    .hideOnDestop {
+        display: block;
     }
 }
